Update: Fix, Background colors and logo spacing

--- a/Assets/Styles/asocorp.css
+++ b/Assets/Styles/asocorp.css
@@ -10,7 +10,7 @@
 body {
     font-family: 'Noto Sans', sans-serif;
     color: #fff;
-    background-color: #020219;
+    background-color: #040429;
 }
 
 .asocorp-header {
@@ -28,7 +28,8 @@ body {
     justify-content: space-between;
     align-items: center;
     background: rgba(255, 255, 255, 0.993);
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 3rem;
+    padding-left: 5rem;
 }
 
 .asocorp-navbar__logo {
@@ -154,7 +155,7 @@ body {
     margin-top: 0.75rem;
     text-decoration: none;
     border: none;
-    /* border-radius: 50px; */
+    border-radius: 5px;
     font-size: 0.85rem;
     font-weight: normal;
     transition: background 0.3s ease;
@@ -167,7 +168,6 @@ body {
 /* Section 2 */
 .asocorp-section2 {
     padding: 4rem 2rem;
-    background: #020219;
     color: #fff;
     display: flex;
     flex-direction: column; 
@@ -206,7 +206,7 @@ body {
 
 .image-overlay {
     position: absolute;
-    background: rgba(0, 38, 80, 0.8); /* dark blue */
+    background: rgb(4, 4, 41);
     width: 50%;
     /* top: 10%; */
     right: 5%;
@@ -297,7 +297,7 @@ body {
 /* About section */
 .asocorp-about {
     padding: 5rem 2.5rem;
-    background-color: #f8f9fa;
+    background-color: #040429;
 }
 
 .asocorp-about__container {
@@ -312,7 +312,7 @@ body {
 .asocorp-about__text {
     flex: 1;
     max-width: 600px;
-    color: #111;
+    color: #fff;
 }
 .asocorp-about__text h5 {
     font-family: 'Montserrat', sans-serif;
@@ -320,7 +320,7 @@ body {
     font-weight: normal;
     color: #007bff;
     /* background-color: #bddbfb; */
-    border: 2px solid #111;
+    border: 2px solid #fff;
     border-radius: 50px;
     padding:  0.3rem 0.6rem;
     width: fit-content;
@@ -347,6 +347,7 @@ body {
     color: #fff;
     background-color: #007bff;
     text-decoration: none;
+    border-radius: 5px;
     padding: 0.5rem 1rem;
     font-size: 0.9rem;
     font-weight: 500;
@@ -359,9 +360,9 @@ body {
     height: auto;
 }
 .asocorp-about__image img {
-    width: 500px;
+    width: 400px;
     height: auto;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
